force-app/main/default/objects/DemoSetupStep__mdt/DemoSetupStep__mdt.object-meta.xml
<CustomObject>
    <description>Step supporting the Demo Setup screen.  Adding steps here is all that&apos;s required for manual steps.  For automatic steps, an additional class must be added as well.</description>
    <label>Demo Setup Step</label>
    <pluralLabel>Demo Setup Steps</pluralLabel>
</CustomObject>