force-app/main/default/objects/DemoSetupStep__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked for active steps.  This field can be used to temporarily deactivate a step.</description>
    <inlineHelpText>Checked for active steps.  This field can be used to temporarily deactivate a step.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>