force-app/main/default/objects/DemoSetupStep__mdt/fields/AutomationClass__c.field-meta.xml
<CustomField>
    <fullName>AutomationClass__c</fullName>
    <description>The name of the apex class used to automate this step.  The automation class is only used for automatic steps and for automation steps it is required.</description>
    <inlineHelpText>The name of the apex class used to automate this step.  The automation class is only used for automatic steps and for automation steps it is required.</inlineHelpText>
    <label>Automation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>