force-app/main/default/objects/DemoSetupStep__mdt/fields/ModalPath__c.field-meta.xml
<CustomField>
    <fullName>ModalPath__c</fullName>
    <description>The unique parameter used to determine which modal to display.  This value is used in the setupStep.js handleErrorStateStepButtonClick event handler.  Please note that this must match exactly with the code.  This field is optional unless Modal is selected as the step type.</description>
    <inlineHelpText>The unique parameter used to determine which modal to display.  This value is used in the setupStep.js event handler.  Please note that this must match exactly with the code.  This field is optional unless Modal is selected as the step type.</inlineHelpText>
    <label>Modal Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>