force-app/main/default/objects/DemoSetupStep__mdt/fields/StepDependsOn__c.field-meta.xml
<CustomField>
    <fullName>StepDependsOn__c</fullName>
    <description>If this field is not blank, then the step number indicated MUST be completed before this step will be enabled.  Be sure you&apos;ve indicated a step that exists and is active.</description>
    <inlineHelpText>If this field is not blank, then the step number indicated MUST be completed before this step will be enabled.  Be sure you&apos;ve indicated a step that exists and is active.</inlineHelpText>
    <label>Step Depends On</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>