force-app/main/default/objects/DemoSetupStep__mdt/fields/StepDescription__c.field-meta.xml
<CustomField>
    <fullName>StepDescription__c</fullName>
    <description>For manual steps, this field should be the step by step instructions the user needs to take to complete the step.  For automated steps this text is optional, but it is often helpful to include the manual steps anyway.</description>
    <inlineHelpText>For manual steps, this field should be the step by step instructions the user needs to take to complete the step.  For automated steps this text is optional, but it is often helpful to include the manual steps anyway.</inlineHelpText>
    <label>Step Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>