force-app/main/default/objects/DemoSetupStep__mdt/fields/StepHyperlink__c.field-meta.xml
<CustomField>
    <fullName>StepHyperlink__c</fullName>
    <description>If included, a hyperlink icon will appear for the step and open a new tab to the location indicated. This field is optional, but recommended for any manual steps.  Valid URLs can be full URLs or relative URLs.  Partial URLs are assumed to be within Salesforce.</description>
    <inlineHelpText>If included, a hyperlink icon will appear for the step and open a new tab to the location indicated. This field is optional, but recommended for any manual steps.  Valid URLs can be full URLs or relative URLs.  Partial URLs are assumed to be within SFDC.</inlineHelpText>
    <label>Step Hyperlink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>