force-app/main/default/objects/DemoSetupStep__mdt/fields/StepNumber__c.field-meta.xml
<CustomField>
    <fullName>StepNumber__c</fullName>
    <description>This field is used for sorting on the screen.  Lower numbers appear before higher numbers.  This is also used for enforcing step dependencies.</description>
    <inlineHelpText>This field is used for sorting on the screen.  Lower numbers appear before higher numbers.  This is also used for enforcing step dependencies.</inlineHelpText>
    <label>Step Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>