force-app/main/default/objects/DemoSetupStep__mdt/fields/StepTitle__c.field-meta.xml
<CustomField>
    <fullName>StepTitle__c</fullName>
    <description>The title of the step, shown on the Demo Setup screen.</description>
    <inlineHelpText>The title of the step, shown on the Demo Setup screen.</inlineHelpText>
    <label>Step Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>