force-app/main/default/objects/DemoSetupStep__mdt/fields/StepType__c.field-meta.xml
<CustomField>
    <fullName>StepType__c</fullName>
    <description>Automatic indicates a fully automated step, requiring an Automation Class.  Manual is a manual step without a confirmation.  Manual-Confirmation is a fully manual step that will ask the user to confirm the step.</description>
    <inlineHelpText>Automatic indicates a fully automated step, requiring an Automation Class.  Manual is a manual step without a confirmation.  Manual-Confirmation is a fully manual step that will ask the user to confirm the step.</inlineHelpText>
    <label>Step Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Manual-Confirm</fullName>
            </value>
            <value>
                <fullName>Modal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>