force-app/main/default/objects/DemoSetupStep__mdt/listViews/All_Demo_Setup_Steps.listView-meta.xml
<ListView>
    <fullName>All_Demo_Setup_Steps</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Demo Setup Steps</label>
    <language>en_US</language>
</ListView>